--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -131,10 +131,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a9a821c",
+   "metadata": {},
+   "source": [
+    "# 3-1) Phase d'entrainement - Données d'entrainement vs données de test\n",
+    "\n",
+    "\n",
+    "bla bla bla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "228d9e45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train database length = 5184\n",
+      "Test database length = 75019\n"
+     ]
+    }
+   ],
+   "source": [
+    "# training base and test base definition according to the ratio we defined\n",
+    "Ratio = 0.8\n",
+    "TrainingSize = int(LengthData*Ratio)\n",
+    "TestSize = LengthData - TrainingSize\n",
+    "\n",
+    "# Train base extraction\n",
+    "#X_DNN_Train = InputNN[0:(TrainingSize-1),:]\n",
+    "#Y_DNN_Train = GroundTruth[0:(TrainingSize-1) , :] \n",
+    "\n",
+    "X_DNN_Train = InputNN\n",
+    "Y_DNN_Train = GroundTruth\n",
+    "\n",
+    "# Test base extraction\n",
+    "#X_DNN_Test = InputNN[TrainingSize : LengthData ,:]\n",
+    "#Y_DNN_Test = GroundTruth[TrainingSize : LengthData , :]\n",
+    "\n",
+    "X_DNN_Test = TestInputNN\n",
+    "Y_DNN_Test = TestGroundTruth\n",
+    "\n",
+    "print(f\"Train database length = {LengthData}\")\n",
+    "print(f\"Test database length = {TestLenghtData}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7bf8fe1",
    "metadata": {},
    "source": [
-    "# 3) Phase d'entrainement - construction du modèle\n",
+    "# 3-2) Phase d'entrainement - construction du modèle\n",
     "\n",
     "Avant d'entrainer il faut construire en premier lieu le réseau. Le concepteur décide de prendre un réseau:\n",
     "\n",
@@ -194,52 +244,63 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a9a821c",
+   "id": "0be77a7f",
    "metadata": {},
    "source": [
-    "# 3-2) Phase d'entrainement - Données d'entrainement vs données de test\n",
+    "# 3-3) Visualisation par Tensorboard\n",
     "\n",
+    "Tensorboard est un outil très utilisé et pratique pour visualiser l'avancement des apprentissage en temps réelle, pour avoir accès au comportement du réseaux de neurones au cours ou après son apprentissage.\n",
     "\n",
-    "bla bla bla"
+    "Au cours de l'apprentissage, un fichier *log* est enregistré\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "228d9e45",
-   "metadata": {},
+   "execution_count": 7,
+   "id": "612aa93b",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train database length = 5184\n",
-      "Test database length = 75019\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 11968), started 0:01:42 ago. (Use '!kill 11968' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-19bc5ed3949b71d3\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-19bc5ed3949b71d3\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# training base and test base definition according to the ratio we defined\n",
-    "Ratio = 0.8\n",
-    "TrainingSize = int(LengthData*Ratio)\n",
-    "TestSize = LengthData - TrainingSize\n",
-    "\n",
-    "# Train base extraction\n",
-    "#X_DNN_Train = InputNN[0:(TrainingSize-1),:]\n",
-    "#Y_DNN_Train = GroundTruth[0:(TrainingSize-1) , :] \n",
-    "\n",
-    "X_DNN_Train = InputNN\n",
-    "Y_DNN_Train = GroundTruth\n",
-    "\n",
-    "# Test base extraction\n",
-    "#X_DNN_Test = InputNN[TrainingSize : LengthData ,:]\n",
-    "#Y_DNN_Test = GroundTruth[TrainingSize : LengthData , :]\n",
-    "\n",
-    "X_DNN_Test = TestInputNN\n",
-    "Y_DNN_Test = TestGroundTruth\n",
-    "\n",
-    "print(f\"Train database length = {LengthData}\")\n",
-    "print(f\"Test database length = {TestLenghtData}\")"
+    "%reload_ext tensorboard\n",
+    "%tensorboard --logdir=\"logs/fit\" --host localhost"
    ]
   },
   {
@@ -247,7 +308,7 @@
    "id": "5060b95a",
    "metadata": {},
    "source": [
-    "# 3-3) Phase entrainement - entrainement\n",
+    "# 3-4) Phase entrainement - entrainement\n",
     "\n",
     "\n",
     "bla bla bla epoch, batch size...history"
@@ -313,67 +374,6 @@
     "model.save(\"models/\"+ModelName)\n",
     "print(f\"Model saved at ---> models/{ModelName}\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed4bfc37",
-   "metadata": {},
-   "source": [
-    "# 3-4) Visualisation par Tensorboard\n",
-    "\n",
-    "Tensorboard est un outil très utilisé et pratique pour visualiser l'avancement des apprentissage en temps réelle, pour avoir accès au comportement du réseaux de neurones au cours ou après son apprentissage.\n",
-    "\n",
-    "Au cours de l'apprentissage, un fichier *log* est enregistré\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "612aa93b",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 11968), started 0:01:42 ago. (Use '!kill 11968' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-19bc5ed3949b71d3\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-19bc5ed3949b71d3\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%reload_ext tensorboard\n",
-    "%tensorboard --logdir=\"logs/fit\" --host localhost"
    ]
   },
   {
