--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -98,19 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3c4748cd",
+   "execution_count": null,
+   "id": "5429c2f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.0.1 (SDL 2.0.14, Python 3.8.11)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "from utils import load_data"
@@ -118,24 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c49f218b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start loading Dataset\n",
-      "Loading duration= 0.1154944896697998 s\n",
-      "Start loading Dataset\n",
-      "Loading duration= 0.9060153961181641 s\n",
-      "\n",
-      "Train database CS2021_TRAIN_3 with length = 6764\n",
-      "Validation database CS2021_VAL_25 with length = 75019\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "INPUT_SIZE = 14\n",
     "OUTPUT_SIZE = 5\n",
@@ -174,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "36a8fa35",
+   "execution_count": null,
+   "id": "bad9da70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7f398009",
    "metadata": {},
    "outputs": [],
@@ -227,56 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "612aa93b",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 8088 (pid 2256), started 21:55:08 ago. (Use '!kill 2256' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-685d1b13b854fde2\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-685d1b13b854fde2\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 8088;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext tensorboard\n",
     "%tensorboard --logdir=\"logs/fit\" --host localhost --port 8088"
@@ -314,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a732529b",
+   "execution_count": null,
+   "id": "7f4eb71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,52 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "522ae680",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_2\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense_6 (Dense)              (None, 64)                960       \n",
-      "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 32)                2080      \n",
-      "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 5)                 165       \n",
-      "=================================================================\n",
-      "Total params: 3,205\n",
-      "Trainable params: 3,205\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Epoch 1/5\n",
-      "7/7 - 1s - loss: 5.0733 - accuracy: 0.1144 - val_loss: 3.0637 - val_accuracy: 0.2076\n",
-      "Epoch 2/5\n",
-      "7/7 - 0s - loss: 3.1167 - accuracy: 0.4054 - val_loss: 2.2043 - val_accuracy: 0.6488\n",
-      "Epoch 3/5\n",
-      "7/7 - 0s - loss: 1.9596 - accuracy: 0.5358 - val_loss: 1.4410 - val_accuracy: 0.6610\n",
-      "Epoch 4/5\n",
-      "7/7 - 0s - loss: 1.1415 - accuracy: 0.6878 - val_loss: 1.1433 - val_accuracy: 0.8289\n",
-      "Epoch 5/5\n",
-      "7/7 - 0s - loss: 0.8903 - accuracy: 0.7957 - val_loss: 1.0566 - val_accuracy: 0.8318\n",
-      "\n",
-      ">>>>>>>>>>> Training completed in 1.26s\n",
-      "Model saved at ---> models/CS2021_TRAIN_3_epoch5_batchsize1024_lr0.001_122425\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Definition of batch and epoch sizes\n",
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "batch_size = 1024\n",
-    "nb_epochs= 5\n",
-    "learning_rate = 10e-4\n",
+    "batch_size = None\n",
+    "nb_epochs= None\n",
+    "learning_rate = None\n",
     "\n",
     "##########################################################\n",
     "\n",
@@ -408,15 +307,15 @@
     "\n",
     "Une fois notre réseau entraîné, on calcule la performance du réseau sur une troisième base, qui n'est encore jamais intervenu lors de la phase d'apprentissage. On parle alors de **base de test**. C'est cette évaluation finale qui définira la performance du modèle, et qui nous permettra des les comparer les uns par rapport aux autres. \n",
     "\n",
-    "Pour ce test, nous choisissons une base composée de 110 scénarios, plus grande que toutes celles utilisées jusque-là. Nous faisons ce choix afin d'avoir une évaluation de la performance de notre modèle la plus fine possible pour la pédagogie et la compréhension de l'impact des **hyperparamètres**. Bien entendu, dans un cas réel, la répartition des données disponibles entre bases de *TRAIN, VAL et TEST* est plutôt respectivement de l'ordre de *60% / 20% / 20%*.\n",
+    "Pour ce test, nous choisissons une base composée de 100 scénarios, plus grande que toutes celles utilisées jusque-là. Nous faisons ce choix afin d'avoir une évaluation de la performance de notre modèle la plus fine possible pour la pédagogie et la compréhension de l'impact des **hyperparamètres**. Bien entendu, dans un cas réel, la répartition des données disponibles entre bases de *TRAIN, VAL et TEST* est plutôt respectivement de l'ordre de *60% / 20% / 20%*.\n",
     "\n",
     "***Exécutez la cellule suivante en utilisant MAJ+ENTER afin de charger la base de données de test***."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "61e48b8d",
+   "execution_count": null,
+   "id": "4aadd162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,19 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "40c6201a",
+   "execution_count": null,
+   "id": "e69e0dd9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start loading Dataset\n",
-      "Loading duration= 3.849297285079956 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load test dataset\n",
     "\n",
@@ -451,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02d41196",
+   "id": "cd72cb26",
    "metadata": {},
    "source": [
     "Une fois le modèle entraîné, nous utilisons une fonctionnalité Keras permettant d'évaluer le modèle sur la base de test.\n",
@@ -495,25 +385,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b7e628ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\u564029\\AppData\\Local\\Temp\\tmp0fkl348h\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\u564029\\AppData\\Local\\Temp\\tmp0fkl348h\\assets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#If necessary, you can load a model trained before using its name, by looking for it in the models/ folder.\n",
     "\n",
@@ -522,7 +397,7 @@
     "\n",
     "#Set TFL_init to GREEN or RED to test these specific use cases. None is for a random initial state.\n",
     "\n",
-    "sim = Sim_TFlight(model, TFL_init=None,FAST=True) \n",
+    "sim = Sim_TFlight(model, TFL_init=None) \n",
     "\n",
     "render = True\n",
     "while render:\n",
@@ -532,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada9a805",
+   "id": "fee21f85",
    "metadata": {},
    "source": [
     "Pour réaliser une courte étude sur la capacité de notre modèle à s'arrêter au feu, nous pouvons lancer une série de scénarios en boulce fermée avec des coefficients de simulation initialisés aléatoirement, et observer les performances de notre modèle selon ce **KPI**, symbolisant une contrainte de sécurité primordiale pour un modèle régissant les passages de feux.\n",
@@ -542,32 +417,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "8ec48847",
+   "execution_count": null,
+   "id": "2f05b26e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\u564029\\AppData\\Local\\Temp\\tmp2vrprb28\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\u564029\\AppData\\Local\\Temp\\tmp2vrprb28\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">>>>>>>>>>> Test 100 on 100 | Number of red lights run: 37 | Ratio: 37.00% | Time per sim: 0.23s\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#If necessary, you can load a model trained before using its name, by looking for it in the models/ folder.\n",
     "\n",
@@ -584,7 +437,7 @@
     "    while step:\n",
     "        step = sim.step()\n",
     "    sim.reset()\n",
-    "    print(f\">>>>>>>>>>> Test {i+1} on {N_TEST} | Ratio: {sim.fail_count/(i+1) * 100:.2f}% | Time per sim: {((time.time() - st_time)/(i+1)):.2f}s\", end='\\r', flush=True)"
+    "    print(f\">>>>>>>>>>> Test {i+1} on {N_TEST} | Ratio of red lights run: {sim.fail_count/(i+1) * 100:.2f}% | Time per sim: {((time.time() - st_time)/(i+1)):.2f}s\", end='\\r', flush=True)"
    ]
   },
   {
@@ -598,7 +451,7 @@
     "\n",
     "Chaque apprentissage correspond à une ligne du tableau, où les valeurs des colonnes correspondent respectivement à :\n",
     "\n",
-    "***Dataset name | Batch size | Number of epoch | Learning rate | Training time | Test DB accuracy | Comments on curves***\n",
+    "***Dataset name | Batch size | Number of epoch | Learning rate | Training time | Test DB accuracy | Test red traffic light run in close loop % | Comments on curves***\n",
     "\n",
     "Au-delà de remplir les cases du tableaux, l'objectif ici est de comparer les différents comportements des apprentissages, de comprendre la notion ***d'overfitting*** et les impacts des différents ***hyperparamètres***.\n",
     "\n",
@@ -609,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "id": "add584b4",
    "metadata": {
     "scrolled": true
@@ -637,7 +490,7 @@
    "source": [
     "####################### TO UPDATE #######################\n",
     "\n",
-    "# DB name, Batch size, Nb of epoch, Learning rate, Training time, Test DB acc, Test % red TL run, Comments on curves\n",
+    "# DB name, Batch size, Nb of epoch, Learning rate, Training time, Test DB acc, Test red TL run %, Comments on curves\n",
     "\n",
     "result_table = {\n",
     "    1:  [\"1_RED\",   64,   50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
