--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff4dac85",
+   "id": "7125432c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7acf776",
+   "id": "3c55ec30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8f75e11",
+   "id": "cf245853",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c8893e3",
+   "id": "fc46db9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c36a0c5",
+   "id": "80bbec65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3f0c05",
+   "id": "3c377feb",
    "metadata": {},
    "source": [
     "Une fois le modèle entraîné, nous utilisons une fonctionnalité Keras permettant d'évaluer le modèle sur la base de test.\n",
@@ -407,10 +407,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feda1338",
+   "id": "9f8c7e3c",
    "metadata": {},
    "source": [
-    "Pour réaliser une courte étude sur la capacité de notre modèle à s'arrêter aux feux,rouges, nous pouvons lancer une série de scénarios en boucle fermée avec des coefficients de simulation initialisés aléatoirement, et observer les performances de notre modèle selon ce **KPI** (*Key Performance Indicator*), modélisant une contrainte de sécurité primordiale pour un modèle régissant les passages de feux.\n",
+    "Pour réaliser une courte étude sur la capacité de notre modèle à s'arrêter aux feux rouges, nous pouvons lancer une série de scénarios en **boucle fermée** avec des coefficients de simulation initialisés aléatoirement, et observer les performances de notre modèle selon ce **KPI** (*Key Performance Indicator*), symbolisant une performance de sécurité primordiale pour un modèle régissant les passages de feux.\n",
     "\n",
     "***Exécutez la cellule suivante après un apprentissage pour réaliser une courte étude de performances en boucle fermée.***"
    ]
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad4bd16",
+   "id": "c8d995af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,31 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "add584b4",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DB name  | Batch size | Nb epoch | Lr     | Training time  | Test DB acc  | Test red run % | Comments on curves\n",
-      "--------------------------------------------------------------------------------------------------------------------\n",
-      "1_RED    | 64         | 50       | 10e-4  | ...            | ...          | ...            | ...            \n",
-      "1_RED    | 256        | 50       | 10e-4  | ...            | ...          | ...            | ...            \n",
-      "1_RED    | 1024       | 50       | 10e-4  | ...            | ...          | ...            | ...            \n",
-      "1_GREEN  | 1024       | 50       | 10e-4  | ...            | ...          | ...            | ...            \n",
-      "3        | 1024       | 1        | 10e-4  | ...            | ...          | ...            | ...            \n",
-      "3        | 1024       | 5        | 10e-4  | ...            | ...          | ...            | ...            \n",
-      "3        | 1024       | 50       | 10e-4  | ...            | ...          | ...            | ...            \n",
-      "25       | 1024       | 50       | 10e-7  | ...            | ...          | ...            | ...            \n",
-      "25       | 1024       | 50       | 10e-6  | ...            | ...          | ...            | ...            \n",
-      "25       | 1024       | 50       | 10e-4  | ...            | ...          | ...            | ...            \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "####################### TO UPDATE #######################\n",
     "\n",
