--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -45,7 +45,7 @@
     "On réalise N scénarios de simulations. On initialise aléatoirement en début de simulation les paramètres suivants : \n",
     "\n",
     "- **la vitesse** de la voiture au T0 de la simulaton\n",
-    "- **la couleur du feu** à ce T0, le temps écoulé depuis que le feu est passé à cette couleur \n",
+    "- **la couleur du feu** à ce T0, et le temps écoulé depuis que le feu est passé à cette couleur \n",
     "- **la distance** à partir de laquelle la voiture verra la couleur du feu\n",
     "\n",
     "Pour chacune de ces grandeurs, un tirage aléatoire de distribution uniforme est utilisé.\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7125432c",
+   "id": "a84e3bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "TrainDataName='CS2021_TRAIN_3'\n",
+    "TrainDataName='CS2021_TRAIN_25'\n",
     "\n",
     "#########################################################\n",
     "\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c55ec30",
+   "id": "1f641cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf245853",
+   "id": "70a5d333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,9 +267,9 @@
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "batch_size = None\n",
-    "nb_epochs= None\n",
-    "learning_rate = None\n",
+    "batch_size = 1024\n",
+    "nb_epochs= 50\n",
+    "learning_rate = 10e-4\n",
     "\n",
     "##########################################################\n",
     "\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc46db9c",
+   "id": "b155d6ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80bbec65",
+   "id": "dc91e11d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c377feb",
+   "id": "4bd8d3ae",
    "metadata": {},
    "source": [
     "Une fois le modèle entraîné, nous utilisons une fonctionnalité Keras permettant d'évaluer le modèle sur la base de test.\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f8c7e3c",
+   "id": "b297132d",
    "metadata": {},
    "source": [
     "Pour réaliser une courte étude sur la capacité de notre modèle à s'arrêter aux feux rouges, nous pouvons lancer une série de scénarios en **boucle fermée** avec des coefficients de simulation initialisés aléatoirement, et observer les performances de notre modèle selon ce **KPI** (*Key Performance Indicator*), symbolisant une performance de sécurité primordiale pour un modèle régissant les passages de feux.\n",
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d995af",
+   "id": "92f56a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
     "    while step:\n",
     "        step = sim.step()\n",
     "    sim.reset()\n",
-    "    print(f\">>>>>>>>>>> Test {i+1} on {N_TEST} | Ratio of red lights run: {sim.fail_count/(i+1) * 100:.2f}% | Time per sim: {((time.time() - st_time)/(i+1)):.2f}s\", end='\\r', flush=True)"
+    "    print(f\">>>>>>>>>>> Test {i+1} on {N_TEST} | Ratio of red lights run: {sim.fail_count/(i+1) * 100:.2f}% | Time per scenario: {((time.time() - st_time)/(i+1)):.2f}s\", end='\\r', flush=True)"
    ]
   },
   {
@@ -451,9 +451,9 @@
     "\n",
     "Chaque apprentissage correspond à une ligne du tableau, où les valeurs des colonnes correspondent respectivement à :\n",
     "\n",
-    "***Dataset name | Batch size | Number of epoch | Learning rate | Training time | Test DB accuracy | Test red traffic light run in close loop % | Comments on curves***\n",
+    "***Dataset name | Batch size | Number of epoch | Learning rate | Training time | Test DB accuracy | Test red light run in close loop % | Comments on curves***\n",
     "\n",
-    "Au-delà de remplir les cases du tableaux, l'objectif ici est de comparer les différents comportements des apprentissages, de comprendre la notion ***d'overfitting*** et les impacts des différents ***hyperparamètres***.\n",
+    "Au-delà de remplir les cases du tableaux, l'objectif ici est de comparer les différents comportements des apprentissages, de comprendre les notions ***d'overfitting***, de ***early stopping*** et ***learning rate decrease***, ainsi que les impacts des différents ***hyperparamètres***.\n",
     "\n",
     "Vous avez maintenant toutes les informations nécessaires pour la réalisation de ce TP. Vous pouvez maintenant commencer les apprentissages en modifiant et en exécutant les cellules de chargement de données, d'apprentissage, de test, etc...\n",
     "\n",
@@ -471,7 +471,7 @@
    "source": [
     "####################### TO UPDATE #######################\n",
     "\n",
-    "# DB name, Batch size, Nb of epoch, Learning rate, Training time, Test DB acc, Test red TL run %, Comments on curves\n",
+    "# DB name, Batch size, Nb of epoch, Learning rate, Training time, Test DB acc, Test red light run %, Comments on curves\n",
     "\n",
     "result_table = {\n",
     "    1:  [\"1_RED\",   64,   50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
