--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -83,8 +83,8 @@
     "Elle nous renvoie des tableaux contenant **nos valeurs d'entrées**, **les valeurs de sortie** associées ainsi que le **taille** de notre base de données.\n",
     "\n",
     "Nous avons accès aux bases de données suivantes pour l'apprentissage:\n",
-    "- CS2021_TRAIN_1_GREEN.txt: une BDD générée lors d'un seul scénario, où le feu était vert au moment du passage.\n",
     "- CS2021_TRAIN_1_RED.txt: une BDD générée lors d'un seul scénario, où le feu était rouge au moment du passage.\n",
+    "- CS2021_TRAIN_1_GREEN.txt: une BDD générée lors d'un seul scénario, où le feu était vert au moment du passage.\n",
     "- CS2021_TRAIN_3.txt: une BDD générée sur la base de trois scénarios.\n",
     "- CS2021_TRAIN_25.txt: une BDD générée sur la base de vingt-cinq scénarios.\n",
     "\n",
@@ -119,7 +119,7 @@
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "TrainDataName='CS2021_TRAIN_25'\n",
+    "TrainDataName='CS2021_TRAIN_1_RED'\n",
     "\n",
     "#########################################################\n",
     "\n",
@@ -142,11 +142,11 @@
     "\n",
     "Avant d'entraîner le modèle, il faut définir en premier lieu l'architecture du réseau de neurones qui l'on souhaite utiliser. On décide ici de prendre un réseau ***MLP*** (*Multi layer perceptron*), avec une première couche de **64 neurones** et une fonction d'activation ***relu*** (*Rectified linear unit*), puis une deuxième couche de **32 neurones** avec une fonction d'activation ***relu***, et une couche de sortie de **5 neurones**, correspondant à la taille que nous souhaitons générer pour notre sortie. \n",
     "\n",
-    "Pour l'entraînement on prendre une loss de type ***categorical_crossentropy*** adaptée aux problèmes de classification, avec un algorithme d'optimisation classique nommé *Adam Optimizer*. Doc et ref: https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/Adam.\n",
+    "Pour l'entraînement on prend une loss de type ***categorical_crossentropy*** adaptée aux problèmes de classification, avec un algorithme d'optimisation classique nommé *Adam Optimizer*. Doc et ref: https://www.tensorflow.org/api_docs/python/tf/keras/optimizers/Adam.\n",
     "\n",
     "Ce modèle est construit et compilé sous **Keras**, une librairie pour implémenter et entraîner facilement des réseaux de neurones. Cette librairie a été incluse dans la librairie **Tensorflow** (développée par Google) suite à l'embauche du fondateur de **Keras**, **François Chollet**. **Tensorflow** est une librairie plus complexe et complète, qui permet à la fois de créer facilement des réseaux de neurones, mais également d'avoir accès à des outils plus complets, comme **Tensorboard** que nous utiliseront pendant l'entraînement pour visualiser les performances de nos modèles en temps réels ou pour les comparer entre eux à posteriori.\n",
     "\n",
-    "***Exécutez la cellule suivante en utilisant MAJ+ENTER d'importer les librairies utiles pour la création de notre modèle, et pour charger en mémoire la fonction create_model***."
+    "***Exécutez la cellule suivante en utilisant MAJ+ENTER pour importer les librairies utiles pour la création de notre modèle, et  charger en mémoire la fonction create_model***."
    ]
   },
   {
@@ -197,9 +197,9 @@
     "\n",
     "Au cours de l'apprentissage, un fichier *log* est enregistré dans le dossier *logs/fit*. Une fois la cellule exécutée, l'interface **Tensorboard** reste accessible en parallèle de l'éxécution d'autres cellules pour visualiser l'avancement de l'apprentissage par actualisation de l'interface.\n",
     "\n",
-    "Pour cette étude, nous ne nous intéresserons qu'à l'onglet ***scalar*** qui nous permet d'afficher les valeurs de ***loss*** et d'***accuracy*** pour les bases de ***train*** et de ***validation***. Vous pouvez à tout moment choisir les courbes que vous souhaitez afficher dans le menu déroulant en bas à gauche (*carrée* pour ajouter ou enlever de la sélection, *rond* pour tout déselectionner sauf celle-ci).\n",
+    "Pour cette étude, nous ne nous intéresserons qu'à l'onglet ***scalar*** qui nous permet d'afficher les valeurs de ***loss*** et d'***accuracy*** pour les bases de ***train*** et de ***validation***. Vous pouvez à tout moment choisir les courbes que vous souhaitez afficher dans le menu déroulant en bas à gauche (*carré* pour ajouter ou enlever de la sélection, *rond* pour tout déselectionner sauf celle-ci).\n",
     "\n",
-    "***Exécutez la cellule suivante en utilisant MAJ+ENTER de charger l'interface Tensorboard. Cette cellule n'est à exécuter qu'une seule fois. Il est ensuite possible d'actualiser les courbes en temps réel directement dans l'interface***."
+    "***Exécutez la cellule suivante en utilisant MAJ+ENTER pour charger l'interface Tensorboard. Cette cellule n'est à exécuter qu'une seule fois. Il est ensuite possible d'actualiser les courbes en temps réel directement dans l'interface***."
    ]
   },
   {
@@ -226,7 +226,7 @@
     "\n",
     "Durant de TP, nous vous proposons de travailler sur trois ***hyperparamètres*** *(paramètres influant directement sur le processus d'apprentissage)*: le batch size, le nombre d'epoch ainsi que le learning rate. Ces hyperparamètres vont influencer la performance de l'apprentissage et celle du modèle obtenu. \n",
     "\n",
-    "Ces hyperparamètres sont à la main du concepteur. Il est donc primordial de connnaître leurs impacts sur l'apprentissage afin de faire les meilleurs choix. Nous vous proposons ci-dessous de courtes définitions de ces trois hyperparamètres.\n",
+    "Ces hyperparamètres sont à la main du concepteur. Il est donc primordial de connnaître leurs impacts sur l'apprentissage afin de faire les meilleurs choix. Nous vous proposons ci-dessous de courtes définitions pour ces trois hyperparamètres.\n",
     "\n",
     "- **Batch size**: un batch est une **sous-partie** de notre base de données, de taille **batch size**, sur laquelle nous allons réaliser un pas d'optimisation *(calcul de notre fonction d'optimisation sur ce batch, moyenne sur le batch, calcul des gradients, optimisation des paramètres du modèle)*. Plus le batch est grand, plus le nombre d'exemples de notre base seront pris en compte pour le calcul de notre pas d'optimisation, et plus ce pas d'optimisation sera dans la direction de l'optimal recherché. \n",
     "\n",
@@ -236,7 +236,7 @@
     "\n",
     "Prenez le temps de bien intégrer ces notions en complétant ces définitions par des recherches internet si nécessaire.\n",
     "\n",
-    "Ces trois hyperparamètres peuvent être modifiés dans l'encart ***TO UPDATE*** ci-dessous. Un tableau de valeur à tester vous est proposé à la fin de ce Notebook. Une fois les valeurs à tester choisi, exécutez la cellule d'apprentissage avec ***MAJ+ENTER***. La courbe correspondant à l'apprentissage apparaître dans l'interface **Tensorboard** après son actualisation, et le modèle sera automatique sauvegardé à la fin de l'apprentissage dans le dossier *models/*.\n",
+    "Ces trois hyperparamètres peuvent être modifiés dans l'encart ***TO UPDATE*** ci-dessous. Un tableau de valeur à tester vous est proposé à la fin de ce Notebook. Une fois les valeurs à tester choisies, exécutez la cellule d'apprentissage avec ***MAJ+ENTER***. La courbe correspondant à l'apprentissage apparaître dans l'interface **Tensorboard** après son actualisation, et le modèle sera automatique sauvegardé à la fin de l'apprentissage dans le dossier *models/*.\n",
     "\n",
     "Le nom du modèle et du log **Tensorboard** est composé selon la logique suivante :\n",
     "\n",
@@ -267,9 +267,9 @@
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "batch_size = 1024\n",
-    "nb_epochs= 50\n",
-    "learning_rate = 10e-4\n",
+    "batch_size = ...\n",
+    "nb_epochs= ...\n",
+    "learning_rate = ...\n",
     "\n",
     "##########################################################\n",
     "\n",
@@ -374,7 +374,7 @@
    "source": [
     "## 4-2) Test sur une simulation en boucle fermée\n",
     "\n",
-    "Nous travaillons ici sur un modèle ayant pour but de gérer le contrôle d'un véhicule lors de l'approche d'un feu de signalisation. Nous avons, jusqu'ici, travailler sur les performances du modèle en **boucle ouverte**. Nous avons comparé des instants de perception t de façon indépendante, sans tenir compte de la séquentialité de la tâche que l'on cherche à résoudre. Mais dans un cas où la sortie du modèle va influencer directement la sortie du véhicule, il est aussi important d'estimer la performance du modèle en **boucle fermée**.\n",
+    "Nous travaillons ici sur un modèle ayant pour but de gérer le contrôle d'un véhicule lors de l'approche d'un feu de signalisation. Nous avons, jusqu'ici, travaillé sur les performances du modèle en **boucle ouverte**. Nous avons comparé des instants de perception t de façon indépendante, sans tenir compte de la séquentialité de la tâche que l'on cherche à résoudre. Mais dans un cas où la sortie du modèle va influencer directement la sortie du véhicule, il est aussi important d'estimer la performance du modèle en **boucle fermée**.\n",
     "\n",
     "On se propose dans les cellules suivantes de visualiser la simulation de l'approche d'un feu en utilisant en boucle fermé les décisions calculés par notre modèle.\n",
     "\n",
