--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "TrainDataName='CS2021_TRAIN_1_RED'\n",
+    "TrainDataName='CS2021_TRAIN_3'\n",
     "\n",
     "#########################################################\n",
     "\n",
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "%load_ext tensorboard\n",
-    "%tensorboard --logdir=\"logs/fit\" --host localhost --port 8088"
+    "%tensorboard --logdir=\"logs/fit\" --host localhost --port 8089"
    ]
   },
   {
@@ -346,14 +346,16 @@
    "source": [
     "Une fois le modèle entraîné, nous utilisons une fonctionnalité Keras permettant d'évaluer le modèle sur la base de test.\n",
     "\n",
-    "***Exécutez la cellule suivante après chaque apprentissage réalisé.***"
+    "***Exécutez la cellule suivante après chaque apprentissage réalisé pour calculer les performances du modèle sur la base de test.***"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d2339cbc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#If necessary, you can load a model trained before using its name, by looking for it in the models/ folder.\n",
@@ -365,6 +367,37 @@
     "\n",
     "test_loss, test_acc = model.evaluate(X_test, Y_test, batch_size=1024)\n",
     "print(f\"\\n>>>>>>>>>>> {model_to_test} performances on test dataset: \\n>>>>>>>>>>> Test Loss={test_loss:.4f}\\n>>>>>>>>>>> Test Accuracy={test_acc:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddcaf7ae",
+   "metadata": {},
+   "source": [
+    "Pour les problèmes de classification, la **matrice de confusion** est un outil de visualisation de performance primordiale. Il permet d'identifier les classes que le modèle prédit correctement, ou, au contraire, pour lesquelles il rencontre des difficultés.\n",
+    "\n",
+    "La somme de chaque ligne de cette matrice est égale à 1, et correspond au nombre de classe **Mode i truth** à prédire dans la base de test. Le pourcentage présent dans les cases correspond au mode effectivement prédit par le modèle. Une valeur de **1** dans la case **Mode 0 pred / Mode 0 truth** indique que le modèle n'a fait aucune erreur sur les exemples de la classe **Mode 0**. Mais si en plus de celà, on trouve **1** également dans la case **Mode 0 pred / Mode 1 truth**, on peut soupçonner notre modèle de prédire la classe **Mode 0** bien trop souvent...\n",
+    "\n",
+    "***Exécutez la cellule suivante après chaque apprentissage réalisé pour afficher la matrice de confusion du modèle sur la base de test.***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb033946",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.math import confusion_matrix, argmax\n",
+    "from utils import show_confusion_matrix\n",
+    "\n",
+    "Y_pred = model(X_test, training=False)\n",
+    "\n",
+    "conf_mat = confusion_matrix(argmax(Y_test,axis=1),argmax(Y_pred,axis=1), num_classes=5)\n",
+    "\n",
+    "show_confusion_matrix(conf_mat)"
    ]
   },
   {
@@ -474,27 +507,27 @@
     "# DB name, Batch size, Nb of epoch, Learning rate, Training time, Test DB acc, Test red light run %, Comments on curves\n",
     "\n",
     "result_table = {\n",
-    "    1:  [\"1_RED\",   64,   50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    2:  [\"1_RED\",   256,  50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    3:  [\"1_RED\",   1024, 50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    4:  [\"1_GREEN\", 1024, 50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    5:  [\"3\",       1024, 1,  \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    6:  [\"3\",       1024, 5,  \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    7:  [\"3\",       1024, 50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    8:  [\"25\",      1024, 50, \"10e-7\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    9:  [\"25\",      1024, 50, \"10e-6\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    10: [\"25\",      1024, 50, \"10e-4\", \"...\", \"...\", \"...\", \"...\"]  #Notes:\n",
+    "    1:  [\"1_RED\",   64,   50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    2:  [\"1_RED\",   256,  50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    3:  [\"1_RED\",   1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    4:  [\"1_GREEN\", 1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    5:  [\"3\",       1024, 1,  \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    6:  [\"3\",       1024, 5,  \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    7:  [\"3\",       1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    8:  [\"25\",      1024, 50, \"1.10e-6\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    9:  [\"25\",      1024, 50, \"1.10e-5\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    10: [\"25\",      1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"]  #Notes:\n",
     "}\n",
     "\n",
     "##########################################################\n",
     "\n",
-    "print(\"{:<8} | {:<10} | {:<8} | {:<6} | {:<14} | {:<12} | {:<14} | {:<15}\".format('DB name','Batch size', 'Nb epoch', 'Lr', 'Training time', 'Test DB acc', 'Test red run %', 'Comments on curves'))\n",
+    "print(\"{:<8} | {:<10} | {:<8} | {:<7} | {:<14} | {:<12} | {:<14} | {:<15}\".format('DB name','Batch size', 'Nb epoch', 'Lr', 'Training time', 'Test DB acc', 'Test red run %', 'Comments on curves'))\n",
     "print(\"--------------------------------------------------------------------------------------------------------------------\")\n",
     "for k, v in result_table.items():\n",
     "    \n",
     "    DB_size, Batch_size, Epoch_size, Learning_rate, Training_time, Test_DB_accuracy, Test_run_red_TL, Comments = v\n",
     "    \n",
-    "    print(\"{:<8} | {:<10} | {:<8} | {:<6} | {:<14} | {:<12} | {:<14} | {:<15}\".format(DB_size, Batch_size, Epoch_size, Learning_rate, Training_time, Test_DB_accuracy, Test_run_red_TL, Comments))"
+    "    print(\"{:<8} | {:<10} | {:<8} | {:<7} | {:<14} | {:<12} | {:<14} | {:<15}\".format(DB_size, Batch_size, Epoch_size, Learning_rate, Training_time, Test_DB_accuracy, Test_run_red_TL, Comments))"
    ]
   },
   {
