--- a/CS2021_AI4AV.ipynb
+++ b/CS2021_AI4AV.ipynb
@@ -98,10 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a84e3bf8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.0.1 (SDL 2.0.14, Python 3.8.11)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from utils import load_data"
@@ -109,17 +118,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c49f218b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start loading Dataset\n",
+      "Loading duration= 0.028936386108398438 s\n",
+      "Start loading Dataset\n",
+      "Loading duration= 1.186187744140625 s\n",
+      "\n",
+      "Train database CS2021_TRAIN_1_GREEN with length = 1556\n",
+      "Validation database CS2021_VAL_25 with length = 75019\n"
+     ]
+    }
+   ],
    "source": [
     "INPUT_SIZE = 14\n",
     "OUTPUT_SIZE = 5\n",
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "TrainDataName='CS2021_TRAIN_3'\n",
+    "TrainDataName='CS2021_TRAIN_1_GREEN'\n",
     "\n",
     "#########################################################\n",
     "\n",
@@ -151,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1f641cc4",
    "metadata": {},
    "outputs": [],
@@ -163,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7f398009",
    "metadata": {},
    "outputs": [],
@@ -204,15 +227,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "612aa93b",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 8091 (pid 18748), started 0:05:58 ago. (Use '!kill 18748' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-d74feffe53ed3683\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d74feffe53ed3683\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 8091;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%load_ext tensorboard\n",
-    "%tensorboard --logdir=\"logs/fit\" --host localhost --port 8089"
+    "%reload_ext tensorboard\n",
+    "%tensorboard --logdir=\"logs/fit\" --host localhost --port 8091"
    ]
   },
   {
@@ -247,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "70a5d333",
    "metadata": {},
    "outputs": [],
@@ -258,18 +317,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "522ae680",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense (Dense)                (None, 64)                960       \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 32)                2080      \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 5)                 165       \n",
+      "=================================================================\n",
+      "Total params: 3,205\n",
+      "Trainable params: 3,205\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/50\n",
+      "2/2 - 1s - loss: 8.2888 - accuracy: 0.0000e+00 - val_loss: 3.3800 - val_accuracy: 0.4388\n",
+      "Epoch 2/50\n",
+      "2/2 - 0s - loss: 6.4857 - accuracy: 0.0938 - val_loss: 2.8262 - val_accuracy: 0.4089\n",
+      "Epoch 3/50\n",
+      "2/2 - 0s - loss: 4.9398 - accuracy: 0.1857 - val_loss: 2.3680 - val_accuracy: 0.3529\n",
+      "Epoch 4/50\n",
+      "2/2 - 0s - loss: 3.5697 - accuracy: 0.2577 - val_loss: 1.9924 - val_accuracy: 0.3594\n",
+      "Epoch 5/50\n",
+      "2/2 - 0s - loss: 2.3402 - accuracy: 0.3136 - val_loss: 1.7295 - val_accuracy: 0.3603\n",
+      "Epoch 6/50\n",
+      "2/2 - 0s - loss: 1.3094 - accuracy: 0.4512 - val_loss: 1.6574 - val_accuracy: 0.1985\n",
+      "Epoch 7/50\n",
+      "2/2 - 0s - loss: 0.7011 - accuracy: 0.7976 - val_loss: 1.7365 - val_accuracy: 0.2362\n",
+      "Epoch 8/50\n",
+      "2/2 - 0s - loss: 0.3939 - accuracy: 0.9769 - val_loss: 1.8776 - val_accuracy: 0.2387\n",
+      "Epoch 9/50\n",
+      "2/2 - 0s - loss: 0.2495 - accuracy: 0.9788 - val_loss: 2.0274 - val_accuracy: 0.2365\n",
+      "Epoch 10/50\n",
+      "2/2 - 0s - loss: 0.1837 - accuracy: 0.9576 - val_loss: 2.1706 - val_accuracy: 0.2354\n",
+      "Epoch 11/50\n",
+      "2/2 - 0s - loss: 0.1503 - accuracy: 0.9512 - val_loss: 2.3045 - val_accuracy: 0.2351\n",
+      "Epoch 12/50\n",
+      "2/2 - 0s - loss: 0.1301 - accuracy: 0.9512 - val_loss: 2.4274 - val_accuracy: 0.2353\n",
+      "Epoch 13/50\n",
+      "2/2 - 0s - loss: 0.1137 - accuracy: 0.9557 - val_loss: 2.5401 - val_accuracy: 0.2360\n",
+      "Epoch 14/50\n",
+      "2/2 - 0s - loss: 0.1004 - accuracy: 0.9647 - val_loss: 2.6436 - val_accuracy: 0.2371\n",
+      "Epoch 15/50\n",
+      "2/2 - 0s - loss: 0.0890 - accuracy: 0.9762 - val_loss: 2.7401 - val_accuracy: 0.2383\n",
+      "Epoch 16/50\n",
+      "2/2 - 0s - loss: 0.0807 - accuracy: 0.9910 - val_loss: 2.8275 - val_accuracy: 0.2393\n",
+      "Epoch 17/50\n",
+      "2/2 - 0s - loss: 0.0752 - accuracy: 0.9994 - val_loss: 2.9043 - val_accuracy: 0.2400\n",
+      "Epoch 18/50\n",
+      "2/2 - 0s - loss: 0.0712 - accuracy: 0.9994 - val_loss: 2.9697 - val_accuracy: 0.2405\n",
+      "Epoch 19/50\n",
+      "2/2 - 0s - loss: 0.0678 - accuracy: 0.9994 - val_loss: 3.0241 - val_accuracy: 0.2406\n",
+      "Epoch 20/50\n",
+      "2/2 - 0s - loss: 0.0640 - accuracy: 0.9994 - val_loss: 3.0692 - val_accuracy: 0.2405\n",
+      "Epoch 21/50\n",
+      "2/2 - 0s - loss: 0.0600 - accuracy: 0.9994 - val_loss: 3.1081 - val_accuracy: 0.2403\n",
+      "Epoch 22/50\n",
+      "2/2 - 0s - loss: 0.0564 - accuracy: 0.9994 - val_loss: 3.1425 - val_accuracy: 0.2401\n",
+      "Epoch 23/50\n",
+      "2/2 - 0s - loss: 0.0532 - accuracy: 0.9994 - val_loss: 3.1745 - val_accuracy: 0.2399\n",
+      "Epoch 24/50\n",
+      "2/2 - 0s - loss: 0.0507 - accuracy: 0.9994 - val_loss: 3.2046 - val_accuracy: 0.2397\n",
+      "Epoch 25/50\n",
+      "2/2 - 0s - loss: 0.0484 - accuracy: 0.9994 - val_loss: 3.2338 - val_accuracy: 0.2397\n",
+      "Epoch 26/50\n",
+      "2/2 - 0s - loss: 0.0463 - accuracy: 0.9994 - val_loss: 3.2623 - val_accuracy: 0.2398\n",
+      "Epoch 27/50\n",
+      "2/2 - 0s - loss: 0.0443 - accuracy: 0.9994 - val_loss: 3.2903 - val_accuracy: 0.2399\n",
+      "Epoch 28/50\n",
+      "2/2 - 0s - loss: 0.0423 - accuracy: 0.9994 - val_loss: 3.3174 - val_accuracy: 0.2400\n",
+      "Epoch 29/50\n",
+      "2/2 - 0s - loss: 0.0405 - accuracy: 0.9994 - val_loss: 3.3437 - val_accuracy: 0.2402\n",
+      "Epoch 30/50\n",
+      "2/2 - 0s - loss: 0.0388 - accuracy: 0.9994 - val_loss: 3.3690 - val_accuracy: 0.2403\n",
+      "Epoch 31/50\n",
+      "2/2 - 0s - loss: 0.0372 - accuracy: 0.9994 - val_loss: 3.3935 - val_accuracy: 0.2405\n",
+      "Epoch 32/50\n",
+      "2/2 - 0s - loss: 0.0358 - accuracy: 0.9994 - val_loss: 3.4172 - val_accuracy: 0.2406\n",
+      "Epoch 33/50\n",
+      "2/2 - 0s - loss: 0.0345 - accuracy: 0.9994 - val_loss: 3.4399 - val_accuracy: 0.2407\n",
+      "Epoch 34/50\n",
+      "2/2 - 0s - loss: 0.0332 - accuracy: 0.9994 - val_loss: 3.4618 - val_accuracy: 0.2408\n",
+      "Epoch 35/50\n",
+      "2/2 - 0s - loss: 0.0320 - accuracy: 0.9994 - val_loss: 3.4829 - val_accuracy: 0.2408\n",
+      "Epoch 36/50\n",
+      "2/2 - 0s - loss: 0.0309 - accuracy: 0.9994 - val_loss: 3.5031 - val_accuracy: 0.2408\n",
+      "Epoch 37/50\n",
+      "2/2 - 0s - loss: 0.0299 - accuracy: 0.9994 - val_loss: 3.5226 - val_accuracy: 0.2408\n",
+      "Epoch 38/50\n",
+      "2/2 - 0s - loss: 0.0289 - accuracy: 0.9994 - val_loss: 3.5417 - val_accuracy: 0.2408\n",
+      "Epoch 39/50\n",
+      "2/2 - 0s - loss: 0.0279 - accuracy: 0.9994 - val_loss: 3.5607 - val_accuracy: 0.2408\n",
+      "Epoch 40/50\n",
+      "2/2 - 0s - loss: 0.0271 - accuracy: 0.9994 - val_loss: 3.5792 - val_accuracy: 0.2408\n",
+      "Epoch 41/50\n",
+      "2/2 - 0s - loss: 0.0262 - accuracy: 0.9994 - val_loss: 3.5972 - val_accuracy: 0.2408\n",
+      "Epoch 42/50\n",
+      "2/2 - 0s - loss: 0.0254 - accuracy: 0.9994 - val_loss: 3.6148 - val_accuracy: 0.2408\n",
+      "Epoch 43/50\n",
+      "2/2 - 0s - loss: 0.0247 - accuracy: 0.9994 - val_loss: 3.6324 - val_accuracy: 0.2408\n",
+      "Epoch 44/50\n",
+      "2/2 - 0s - loss: 0.0240 - accuracy: 0.9994 - val_loss: 3.6499 - val_accuracy: 0.2408\n",
+      "Epoch 45/50\n",
+      "2/2 - 0s - loss: 0.0233 - accuracy: 0.9994 - val_loss: 3.6673 - val_accuracy: 0.2408\n",
+      "Epoch 46/50\n",
+      "2/2 - 0s - loss: 0.0227 - accuracy: 0.9994 - val_loss: 3.6844 - val_accuracy: 0.2409\n",
+      "Epoch 47/50\n",
+      "2/2 - 0s - loss: 0.0221 - accuracy: 0.9994 - val_loss: 3.7011 - val_accuracy: 0.2409\n",
+      "Epoch 48/50\n",
+      "2/2 - 0s - loss: 0.0215 - accuracy: 0.9994 - val_loss: 3.7174 - val_accuracy: 0.2409\n",
+      "Epoch 49/50\n",
+      "2/2 - 0s - loss: 0.0209 - accuracy: 0.9994 - val_loss: 3.7332 - val_accuracy: 0.2409\n",
+      "Epoch 50/50\n",
+      "2/2 - 0s - loss: 0.0204 - accuracy: 0.9994 - val_loss: 3.7489 - val_accuracy: 0.2409\n",
+      "\n",
+      ">>>>>>>>>>> Training completed in 12.23s\n",
+      "Model saved at ---> models/CS2021_TRAIN_1_GREEN_epoch50_batchsize1024_lr0.001_145957\n"
+     ]
+    }
+   ],
    "source": [
     "#Definition of batch and epoch sizes\n",
     "\n",
     "####################### TO UPDATE #######################\n",
     "\n",
-    "batch_size = ...\n",
-    "nb_epochs= ...\n",
-    "learning_rate = ...\n",
+    "batch_size = 1024\n",
+    "nb_epochs= 50\n",
+    "learning_rate = 1e-3\n",
     "\n",
     "##########################################################\n",
     "\n",
@@ -314,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b155d6ed",
    "metadata": {},
    "outputs": [],
@@ -325,10 +508,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dc91e11d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start loading Dataset\n",
+      "Loading duration= 4.976655721664429 s\n"
+     ]
+    }
+   ],
    "source": [
     "# Load test dataset\n",
     "\n",
@@ -351,12 +543,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d2339cbc",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "333/333 [==============================] - 1s 2ms/step - loss: 3.4268 - accuracy: 0.2357\n",
+      "\n",
+      ">>>>>>>>>>> CS2021_TRAIN_1_GREEN_epoch50_batchsize1024_lr0.001_145957.h5 performances on test dataset: \n",
+      ">>>>>>>>>>> Test Loss=3.4268\n",
+      ">>>>>>>>>>> Test Accuracy=0.2357\n"
+     ]
+    }
+   ],
    "source": [
     "#If necessary, you can load a model trained before using its name, by looking for it in the models/ folder.\n",
     "\n",
@@ -371,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddcaf7ae",
+   "id": "c2e479ce",
    "metadata": {},
    "source": [
     "Pour les problèmes de classification, la **matrice de confusion** est un outil de visualisation de performance primordiale. Il permet d'identifier les classes que le modèle prédit correctement, ou, au contraire, pour lesquelles il rencontre des difficultés.\n",
@@ -383,12 +587,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb033946",
+   "execution_count": 14,
+   "id": "5c709416",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Mod0   Mod1   Mod2   Mod3   Mod4\n",
+      "  pred   pred   pred   pred   pred\n",
+      "____________________________________\n",
+      "| 1.00 | 0.00 | 0.00 | 0.00 | 0.00 | Mod0 truth\n",
+      "|______|______|______|______|______|\n",
+      "| 0.09 | 0.91 | 0.00 | 0.00 | 0.00 | Mod1 truth\n",
+      "|______|______|______|______|______|\n",
+      "| 0.33 | 0.67 | 0.00 | 0.00 | 0.00 | Mod2 truth\n",
+      "|______|______|______|______|______|\n",
+      "| 0.00 | 1.00 | 0.00 | 0.00 | 0.00 | Mod3 truth\n",
+      "|______|______|______|______|______|\n",
+      "| 0.00 | 1.00 | 0.00 | 0.00 | 0.00 | Mod4 truth\n",
+      "|______|______|______|______|______|\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.math import confusion_matrix, argmax\n",
     "from utils import show_confusion_matrix\n",
@@ -418,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b7e628ba",
    "metadata": {},
    "outputs": [],
@@ -450,10 +674,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "92f56a31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\u564029\\AppData\\Local\\Temp\\tmpltzn0xv1\\assets\n",
+      ">>>>>>>>>>> Test 100 on 100 | Ratio of red lights run: 58.00% | Time per scenario: 0.10s\r"
+     ]
+    }
+   ],
    "source": [
     "#If necessary, you can load a model trained before using its name, by looking for it in the models/ folder.\n",
     "\n",
@@ -495,28 +728,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "add584b4",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DB name  | Batch size | Nb epoch | Lr      | Training time  | Test DB acc  | Test red run % | Comments on curves\n",
+      "--------------------------------------------------------------------------------------------------------------------\n",
+      "1_RED    | 64         | 50       | 1e-3    | ...            | ...          | ...            | ...            \n",
+      "1_RED    | 256        | 50       | 1e-3    | ...            | ...          | ...            | ...            \n",
+      "1_RED    | 1024       | 50       | 1e-3    | ...            | ...          | ...            | ...            \n",
+      "1_GREEN  | 1024       | 50       | 1e-3    | ...            | ...          | ...            | ...            \n",
+      "3        | 1024       | 1        | 1e-3    | ...            | ...          | ...            | ...            \n",
+      "3        | 1024       | 5        | 1e-3    | ...            | ...          | ...            | ...            \n",
+      "3        | 1024       | 50       | 1e-3    | ...            | ...          | ...            | ...            \n",
+      "25       | 1024       | 50       | 1e-6    | ...            | ...          | ...            | ...            \n",
+      "25       | 1024       | 50       | 1e-5    | ...            | ...          | ...            | ...            \n",
+      "25       | 1024       | 50       | 1e-3    | ...            | ...          | ...            | ...            \n"
+     ]
+    }
+   ],
    "source": [
     "####################### TO UPDATE #######################\n",
     "\n",
     "# DB name, Batch size, Nb of epoch, Learning rate, Training time, Test DB acc, Test red light run %, Comments on curves\n",
     "\n",
     "result_table = {\n",
-    "    1:  [\"1_RED\",   64,   50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    2:  [\"1_RED\",   256,  50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    3:  [\"1_RED\",   1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    4:  [\"1_GREEN\", 1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    5:  [\"3\",       1024, 1,  \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    6:  [\"3\",       1024, 5,  \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    7:  [\"3\",       1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    8:  [\"25\",      1024, 50, \"1.10e-6\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    9:  [\"25\",      1024, 50, \"1.10e-5\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
-    "    10: [\"25\",      1024, 50, \"1.10e-3\", \"...\", \"...\", \"...\", \"...\"]  #Notes:\n",
+    "    1:  [\"1_RED\",   64,   50, \"1e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    2:  [\"1_RED\",   256,  50, \"1e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    3:  [\"1_RED\",   1024, 50, \"1e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    4:  [\"1_GREEN\", 1024, 50, \"1e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    5:  [\"3\",       1024, 1,  \"1e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    6:  [\"3\",       1024, 5,  \"1e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    7:  [\"3\",       1024, 50, \"1e-3\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    8:  [\"25\",      1024, 50, \"1e-6\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    9:  [\"25\",      1024, 50, \"1e-5\", \"...\", \"...\", \"...\", \"...\"], #Notes:\n",
+    "    10: [\"25\",      1024, 50, \"1e-3\", \"...\", \"...\", \"...\", \"...\"]  #Notes:\n",
     "}\n",
     "\n",
     "##########################################################\n",
